# -MRI-Tumor-Detection-with-CNN-Multi-Agent-AI-Reporting-CrewAI-

./: README.md  breast.ipynb
dataset/breast/: README.md  pyproject.toml
dataset/breast/src/breast/: app.py  breast_mri_report.md  crew.py  main.py
dataset/breast/src/breast/config/: agents.yaml  tasks.yaml
dataset/breast/src/breast/rag/: generator.py  loader.py  retriever.py  vectorstore.py
